--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,8 @@ dependencies:
     sdk: flutter
   webview_flutter: ^0.3.19+9
   http: ^0.12.0+4
-  autocomplete_textfield: ^1.7.3
   share: ^0.6.3+6
-
+  flutter_speed_dial: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
