--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.3
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  adaptive_icon_padding: true
+  image_path: "assets/images/icon.png"
+  adaptive_icon_background: "assets/images/icon_background.png"
+  adaptive_icon_foreground: "assets/images/icon_foreground.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
