--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.7.3
+  flutter_native_splash: ^0.1.9
 
 
 flutter_icons:
@@ -41,6 +42,10 @@ flutter_icons:
   image_path: "assets/images/icon.png"
   adaptive_icon_background: "assets/images/icon_background.png"
   adaptive_icon_foreground: "assets/images/icon_foreground.png"
+
+flutter_native_splash:
+  image: "assets/images/splash.png"
+  color: "#607d8b"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
