--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   http: ^0.12.0+4
   share: ^0.6.3+6
   flutter_speed_dial: ^1.2.5
+  sembast: ^2.3.0
+  path_provider: ^1.6.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
